--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.67.0",
     "sonner": "^2.0.7",
-    "zod": "^4.1.13"
+    "zod": "^4.1.13",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
