--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 20.17.0 ✅ # FIXED ENGINE WARNING
+          node-version: 20
 
       - name: Install dependencies
         run: npm install
